force-app/main/default/objects/W360_Error_Source__mdt/W360_Error_Source__mdt.object-meta.xml
<CustomObject>
    <description>Configures which error log object feeds into W360 Incident tracking.</description>
    <label>W360 Error Source</label>
    <pluralLabel>W360 Error Sources</pluralLabel>
</CustomObject>