force-app/main/default/objects/W360_Error_Source__mdt/fields/Class_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Class_Name_Field__c</fullName>
    <label>Class Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>