force-app/main/default/objects/W360_Error_Source__mdt/fields/Error_Message_Field__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Field__c</fullName>
    <label>Error Message Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>