force-app/main/default/objects/W360_Error_Source__mdt/fields/Exception_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type_Field__c</fullName>
    <label>Exception Type Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>