force-app/main/default/objects/W360_Error_Source__mdt/fields/Lookback_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Hours__c</fullName>
    <label>Lookback Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>