force-app/main/default/objects/W360_Error_Source__mdt/fields/Min_Severity__c.field-meta.xml
<CustomField>
    <fullName>Min_Severity__c</fullName>
    <label>Min Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>