force-app/main/default/objects/W360_Error_Source__mdt/fields/Severity_Field__c.field-meta.xml
<CustomField>
    <fullName>Severity_Field__c</fullName>
    <label>Severity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>