force-app/main/default/objects/W360_Error_Source__mdt/fields/Stack_Trace_Field__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace_Field__c</fullName>
    <label>Stack Trace Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>