force-app/main/default/objects/W360_Error_Source__mdt/fields/Timestamp_Field__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Field__c</fullName>
    <label>Timestamp Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>